Fixed bug to align reasons divs in center of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -101,6 +103,22 @@ main {
     position: relative;
 }
 
+#cover-text {
+    /* final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
 /* Reasons section */
 #reasons {
     margin: 20px auto;
@@ -115,14 +133,14 @@ main {
 
 #benefits-physical > div, #benefits-mental > div {
     line-height: 20px;
-    margin-bottom: 20px;
+    margin: 0 auto 20px;
 }
 
 #benefits p {
     padding: 0 20px;
 }
 
-hr {
+#benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
@@ -142,22 +160,6 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#cover-text {
-    /* final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(241, 109, 107, .7);
-    font-size: 130%;
-    position: absolute;
-    bottom: 30px;
-    width: 80%;
-    min-height: 200px;
-    padding-top: 40px;
-    padding-left: 10px;
-}
-
-#cover-text > h2, #cover-text > h3 {
-    color: #ffffff;
 }
 
 /* Meetups section */
